--- a/src/app/left-container/left-container.component.html
+++ b/src/app/left-container/left-container.component.html
@@ -1,7 +1,7 @@
 <div class="left-container">
     <div class="left-container-navbar">
         <div class="search-icon" (click)="onSearch(location.value)"><fa-icon class="fa-xs" [icon]="faMagnifyingGlass"></fa-icon></div>
-        <div class="search-input"> <input type="text" placeholder="Mumbai" #location (keyup.Enter)="onSearch(location.value)"></div>
+        <div class="search-input"> <input type="text" placeholder="Prayagraj" #location (keyup.Enter)="onSearch(location.value)"></div>
         <div class="location-icon" (click)="onSearch(location.value)"> <fa-icon class="fa-xs" [icon]="faLocation"></fa-icon></div>
     </div>
 
