--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@
 body {
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
     font-family: 'Open Sans', sans-serif;
 }
 
